# ai-streaming-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
ai/: Dockerfile  Dockerfile.dev  pyproject.toml
ai/app/: config.py  main.py
ai/app/api/: content.py  embeddings.py  health.py  models.py  search.py
ai/app/services/: embedding_service.py  llm_service.py  local_llm_service.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ai_settings.py
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/auth/: auth.py  oauth_facebook.py  oauth_google.py  permissions.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  ai_settings.py  analytics.py  category.py  cloud_connection.py  live.py  match.py  recommendation.py  series.py  subscription.py  talent.py  tenant.py  tournament.py  transcode.py  user.py  video.py
backend/app/payments/: base.py  factory.py  mock_backend.py  paypal_backend.py  razorpay_backend.py  stripe_backend.py
backend/app/schemas/: auth.py  live.py  recommendation.py  series.py  talent.py  user.py  video.py  watchlist.py
backend/app/services/: ai_config.py  ai_search_service.py  embedding_service.py  intro_detection.py  metadata_enrichment.py  otp_service.py  recommendation_service.py  scene_analysis.py  transcode_service.py
backend/app/storage/: azure_blob.py  base.py  factory.py  gcs.py  local.py  s3.py  urls.py
backend/app/tenant/: context.py  middleware.py
backend/app/utils/: ffmpeg.py  ffprobe.py  filename_parser.py  slug.py  thumbnails.py
backend/app/worker/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0003_video_preview_start_time.py  (+5 more)
(+98 files in other folders)
