[project]
name = "streaming-backend"
version = "0.1.0"
description = "Streaming platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "pillow>=11.0.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
s3 = ["aioboto3>=13.0.0"]
azure = ["azure-storage-blob>=12.0.0", "azure-identity>=1.0.0"]
gcs = ["google-cloud-storage>=2.0.0"]
cloud = [
    "aioboto3>=13.0.0",
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.0.0",
    "google-cloud-storage>=2.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
